refactor: Improve MUI imports (use tree shaking)

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/icons/voraus.ico">
+  <link rel="icon" type="image/png" href="/icons/voraus.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>vdoc</title>
 </head>
