feat: Correctly substitute documentation links for router-based navigation
Some `href` attributes of the documentation links point to the static
FastAPI route, e.g. `http://localhost:3000/static/projects/name/version/`.
Since we want to use tanstack router for navigation, the links need to be
substituted with the UI navigation schema, in this case
`http://localhost:3000/name/version`.

This way, links from the documentation can be copied and shared.

--- a/tests/ui/resources/mockedIndex.html
+++ b/tests/ui/resources/mockedIndex.html
@@ -6,5 +6,10 @@
   </style>
   <body>
     <h1>Hello, this is a mocked documentation component.</h1>
+    <ul>
+      <li><a href="#">Link with href '#'</a></li>
+      <li><a href="index.html">Link with href 'index.html'</a></li>
+      <li><a href="https://www.sphinx-doc.org/">Link with href 'https://www.sphinx-doc.org/'</a></li>
+    </ul>
   </body>
 </html>
