refactor(tests): Move style of mocked `index.html` to separate file

--- a/tests/ui/resources/mockedIndex.html
+++ b/tests/ui/resources/mockedIndex.html
@@ -1,20 +1,7 @@
 <html>
-  <style>
-    .light {
-      background-color: rgb(227, 242, 253);
-      color: black;
-    }
-    .light a {
-      color: blue;
-    }
-    .dark {
-      background-color: rgb(18, 18, 18);
-      color: white;
-    }
-    .dark a {
-      color: lightblue;
-    }
-  </style>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
   <body>
     <h1>Hello, this is a mocked documentation component.</h1>
     <ul>
