--- a/tests/ui/resources/mockedIndex.html
+++ b/tests/ui/resources/mockedIndex.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="#">Link with href '#'</a></li>
       <li><a href="index.html">Link with href 'index.html'</a></li>
+      <li><a href="examples.html">Link with href 'examples.html'</a></li>
       <li><a href="https://www.sphinx-doc.org/">Link with href 'https://www.sphinx-doc.org/'</a></li>
     </ul>
     <script>
