--- a/tests/ui/resources/mockedExamples.html
+++ b/tests/ui/resources/mockedExamples.html
@@ -1,14 +1,17 @@
 <html>
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>This is a mocked examples page</h1>
-    <ul>
-      <li>Example 01</li>
-      <li>Example 02</li>
-      <li>Example 03</li>
-      <li><a href="index.html">Take me back to 'index.html'</a></li>
-    </ul>
+    <div class="container mx-auto">
+      <h1 class="text-3xl">This is a mocked examples page</h1>
+      <ul role="list" class="divide-y divide-gray-100">
+        <li class="flex justify-between py-5">Example 01</li>
+        <li class="flex justify-between py-5">Example 02</li>
+        <li class="flex justify-between py-5">Example 03</li>
+        <li class="flex justify-between py-5"><a href="index.html">Take me back to 'index.html'</a></li>
+      </ul>
+    </div>
   </body>
 </html>
