--- a/tests/ui/resources/mockedIndex.html
+++ b/tests/ui/resources/mockedIndex.html
@@ -1,20 +1,19 @@
-<html>
+<html class="dark">
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>Hello, this is a mocked documentation component.</h1>
-    <ul>
-      <li><a href="#">Link with href '#'</a></li>
-      <li><a href="index.html">Link with href 'index.html'</a></li>
-      <li><a href="examples.html">Link with href 'examples.html'</a></li>
-      <li><a href="https://www.sphinx-doc.org/">Link with href 'https://www.sphinx-doc.org/'</a></li>
-    </ul>
-    <script>
-      function applyColorMode() {
-        document.body.className = localStorage.getItem('darkMode') || 'light'
-      }
-      applyColorMode()
-    </script>
+    <div class="container mx-auto">
+      <h1 class="text-3xl">Hello, this is a mocked documentation component.</h1>
+      <ul role="list" class="divide-y divide-gray-100">
+        <li class="flex justify-between py-5"><a href="#"> Link with href '#'</a></li>
+        <li class="flex justify-between py-5"><a href="index.html">Link with href 'index.html'</a></li>
+        <li class="flex justify-between py-5"><a href="examples.html">Link with href 'examples.html'</a></li>
+        <li class="flex justify-between py-5">
+          <a href="https://www.sphinx-doc.org/">Link with href 'https://www.sphinx-doc.org/'</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
