fix(ui): Open links in new tabs if they have a `_blank` target
Links that are to be opened in new tabs (i.e. have the `_blank` target) should still be opened in new tabs.

This fixes the internal ticket [BUGS-6223](https://vorausrobotik.atlassian.net/issues/BUGS-6223)

--- a/tests/ui/resources/mockedIndex.html
+++ b/tests/ui/resources/mockedIndex.html
@@ -13,6 +13,9 @@
         <li class="flex justify-between py-5">
           <a href="https://www.sphinx-doc.org/">Link with href 'https://www.sphinx-doc.org/'</a>
         </li>
+        <li class="flex justify-between py-5">
+          <a href="https://example.com/" target="_blank">Link to 'https://example.com/' that opens in a new tab</a>
+        </li>
       </ul>
     </div>
   </body>
