test(ui): Add integration test for searching in the documentation

--- a/tests/ui/resources/mockedIndex.html
+++ b/tests/ui/resources/mockedIndex.html
@@ -10,6 +10,7 @@
         <li class="flex justify-between py-5"><a href="#"> Link with href '#'</a></li>
         <li class="flex justify-between py-5"><a href="index.html">Link with href 'index.html'</a></li>
         <li class="flex justify-between py-5"><a href="examples.html">Link with href 'examples.html'</a></li>
+        <li class="flex justify-between py-5"><a href="search.html">Search documentation</a></li>
         <li class="flex justify-between py-5">
           <a href="https://www.sphinx-doc.org/">Link with href 'https://www.sphinx-doc.org/'</a>
         </li>
